Update + Fix
Vectors updated and scrollbar set to dark mode now.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -33,6 +33,10 @@ $social-twitter-color: #1da1f2;
 
 /* General */
 
+:root {
+  color-scheme: dark;
+}
+
 ::selection {
   background: $text-selection-color; /* WebKit/Blink Browsers */
 }
